# TaleScripter

./: .gitignore  CMakeLists.txt  LICENCE  changelog  makefile
Docs/: README
Documentation/DeveloperDocs/: DeveloperManual.html  style.css
Game/Include/BackgroundRenderer/: BackgroundImageRenderer.hpp  BackgroundOverlay.hpp  BackgroundTransition.hpp  BackgroundTransitionHandler.hpp  BackgroundTransitionRenderer.hpp
Game/Include/Base/: Engine.hpp  ErrorScreen.hpp  Game.hpp  GameManager.hpp  GameScreen.hpp  Renderers.hpp  ScreenState.h
Game/Include/Config/: Config.hpp  ConfigConstants.hpp  ConfigHandler.hpp
Game/Include/Database/: DataAttribute.hpp  DatabaseConnection.hpp  DatabaseDataSanitiser.hpp  DatabaseSchema.hpp  TypeCaster.hpp
Game/Include/Exceptions/: ConfigurationException.hpp  DataSetException.hpp  DatabaseException.hpp  Exceptions.hpp  GeneralException.hpp  InputHandlerException.hpp  JsonParserException.hpp  MisuseException.hpp  ProjectBuilderException.hpp  ProjectDataException.hpp  ResourceException.hpp
Game/Include/GameCompiler/: ChapterBuilder.hpp  FileHandler.hpp  GameCompiler.hpp  GameCompilerChapterParser.hpp  JsonHandler.hpp  ProjectBuilder.hpp  ProjectBuilderHelper.h  ResourceBuilder.hpp  ScreenBuilder.hpp  ThemeBuilder.hpp
Game/Include/GameData/: GameSaveManager.h  GameState.h
Game/Include/GameScreens/: TestScreen.hpp
Game/Include/Input/: GamepadHandler.hpp  InputManager.hpp  KeyboardHandler.hpp  Keymap.hpp  MouseHandler.hpp
Game/Include/Menus/: DataMenu.hpp  TitleScreen.h
Game/Include/Misc/: ColourBuilder.hpp  DateTime.h  ParameterHandler.hpp  ProjectInfo.hpp  Utils.hpp
Game/Include/Resource/: FontManager.hpp  MusicManager.hpp  MusicPlayRequest.hpp  ResourceManager.hpp  TextureManager.hpp
Game/Include/SpriteRenderer/: Sprite.hpp  SpriteRenderer.hpp
Game/Include/TextRenderer/: TextRenderer.hpp
Game/Include/TileRenderer/: Tile.hpp  TileRenderer.hpp  Tilemap.hpp
Game/Include/UI/: CommonUI.h  UIAssetBuilder.h  UIConstants.h  UIUtils.hpp
Game/Include/UI/Elements/: Button.h
Game/Include/UI/Groups/: ChoiceDialog.h  Menu.h  MenuItem.h
Game/Include/UI/Themes/: UITheme.h  UIThemeManager.h
Game/Include/VisualNovelEngine/: NovelScreenClasses.hpp
Game/Include/VisualNovelEngine/Classes/Data/: Character.hpp  CharacterSprite.hpp  Novel.hpp  VisualNovelEngineConstants.hpp
Game/Include/VisualNovelEngine/Classes/Data/DataModels/: MusicPlaybackRequestMetadata.hpp
Game/Include/VisualNovelEngine/Classes/UI/: CharacterSpriteRenderer.hpp  CharacterSpriteSlot.hpp  NovelTextDisplay.hpp
Game/Include/VisualNovelEngine/Screens/: NovelScreen.hpp
Game/Src/: EntryPoint.cpp  GameCompilerEntryPoint.cpp
Game/Src/BackgroundRenderer/: BackgroundImageRenderer.cpp  BackgroundOverlay.cpp  BackgroundTransition.cpp  BackgroundTransitionHandler.cpp  BackgroundTransitionRenderer.cpp
Game/Src/Base/: Engine.cpp  ErrorScreen.cpp  Game.cpp  GameManager.cpp  GameScreen.cpp
Game/Src/Config/: ConfigHandler.cpp
Game/Src/Database/: DatabaseConnection.cpp  DatabaseSchema.cpp
Game/Src/GameCompiler/: ChapterBuilder.cpp  GameCompiler.cpp  GameCompilerChapterParser.cpp  ProjectBuilder.cpp  ResourceBuilder.cpp  ScreenBuilder.cpp  ThemeBuilder.cpp
Game/Src/GameData/: GameSaveManager.cpp  GameState.cpp
Game/Src/GameScreens/: TestScreen.cpp
Game/Src/Input/: GamepadHandler.cpp  InputManager.cpp  KeyboardHandler.cpp  Keymap.cpp  MouseHandler.cpp
Game/Src/Menus/: DataMenu.cpp  TitleScreen.cpp
Game/Src/Misc/: ColourBuilder.cpp  ParameterHandler.cpp  Utils.cpp
Game/Src/Resource/: FontManager.cpp  MusicManager.cpp  ResourceManager.cpp  TextureManager.cpp
Game/Src/SpriteRenderer/: Sprite.cpp  SpriteRenderer.cpp
Game/Src/TextRenderer/: TextRenderer.cpp
Game/Src/UI/: CommonUI.cpp
Game/Src/UI/Elements/: Button.cpp
Game/Src/UI/Groups/: ChoiceDialog.cpp  Menu.cpp  MenuItem.cpp
Game/Src/UI/Themes/: UITheme.cpp  UIThemeManager.cpp
Game/Src/VisualNovelEngine/Classes/Data/: Character.cpp  CharacterSprite.cpp  Novel.cpp
Game/Src/VisualNovelEngine/Classes/UI/: CharacterSpriteRenderer.cpp  CharacterSpriteSlot.cpp  NovelTextDisplay.cpp
Game/Src/VisualNovelEngine/Screens/: NovelScreen.cpp
